# ClockPlusPlus

./: CMakeLists.txt  README.md  agenda.cpp  agenda.h  calendar.xml  calendarEvent.cpp  calendarEvent.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
